[gd_scene load_steps=4 format=3 uid="uid://bsu8iut88ttna"]

[ext_resource type="Script" uid="uid://b0ho6eu4u8c34" path="res://Main.gd" id="1_glv2v"]
[ext_resource type="Texture2D" uid="uid://cb8w7vqnx6ey0" path="res://gamw.jpg" id="2_r0du0"]
[ext_resource type="AudioStream" uid="uid://juhglcalf1fw" path="res://click.wav" id="2_uu6xs"]

[node name="Main" type="Node2D"]
script = ExtResource("1_glv2v")

[node name="Background" type="TextureRect" parent="."]
offset_right = 612.0
offset_bottom = 412.0
texture = ExtResource("2_r0du0")

[node name="Square" type="ColorRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="ScoreLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_uu6xs")

[node name="TimerLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="CountdownTimer" type="Timer" parent="."]

[node name="RestartButton" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0

[node name="LivesLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="SquareTimer" type="Timer" parent="."]
